# venmo-splitter

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  serve_streamlit.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
functions/: calculator.py
